tests/tooling/fixtures/native/execution/negative/unary_plus_missing_operand.objc3
module UnaryPlusMissingOperand;

fn main() -> i32 {
  let value = +;
  return value;
}
